<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnMonthPrev"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:contentDescription="@string/slycalendar_prev"
            android:foreground="?android:attr/actionBarItemBackground"
            android:padding="12dp"
            app:srcCompat="@drawable/slycalendar_chevron_left"
            tools:ignore="VectorDrawableCompat" />


        <TextView
            android:id="@+id/txtSelectedMonth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/slycalendar_defTextColor"
            android:textSize="14sp"
            tools:text="APRIL" />

        <ImageView
            android:id="@+id/btnMonthNext"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:contentDescription="@string/slycalendar_next"
            android:foreground="?android:attr/actionBarItemBackground"
            android:padding="12dp"
            app:srcCompat="@drawable/slycalendar_chevron_right"
            tools:ignore="VectorDrawableCompat" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp">

        <TextView
            android:id="@+id/day1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha=".7"
            android:gravity="center"
            android:text="@string/slycalendar_sun"
            android:textColor="@color/slycalendar_defTextColor"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/day2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha=".7"
            android:gravity="center"
            android:text="@string/slycalendar_mon"
            android:textColor="@color/slycalendar_defTextColor"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/day3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha=".7"
            android:gravity="center"
            android:text="@string/slycalendar_tue"
            android:textColor="@color/slycalendar_defTextColor"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/day4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha=".7"
            android:gravity="center"
            android:text="@string/slycalendar_wed"
            android:textColor="@color/slycalendar_defTextColor"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/day5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha=".7"
            android:gravity="center"
            android:text="@string/slycalendar_thu"
            android:textColor="@color/slycalendar_defTextColor"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/day6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha=".7"
            android:gravity="center"
            android:text="@string/slycalendar_fri"
            android:textColor="@color/slycalendar_defTextColor"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/day7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha=".7"
            android:gravity="center"
            android:text="@string/slycalendar_sat"
            android:textColor="@color/slycalendar_defTextColor"
            android:textSize="13sp" />

    </LinearLayout>

    <GridView
        android:id="@+id/calendarGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:horizontalSpacing="0dp"
        android:numColumns="7"
        android:verticalSpacing="0dp" />

</LinearLayout>