<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainFrame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/slycalendar_defBackgroundColor"
    android:orientation="vertical" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/slycalendar_defHeaderColor"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="25dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/txtYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:alpha="0.5"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/slycalendar_defHeaderTextColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/txtSelectedPeriod"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtSelectedPeriod"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2018" />

        <TextView
            android:id="@+id/txtSelectedPeriod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/slycalendar_defHeaderTextColor"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtYear"
            tools:text="FRI, 13 — SUN, 15 MAY" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnMonthPrev"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="0"
                android:contentDescription="@string/slycalendar_prev"
                android:padding="12dp"
                app:srcCompat="@drawable/slycalendar_chevron_left"
                tools:ignore="VectorDrawableCompat" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/btnMonthNext"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="0"
                android:contentDescription="@string/slycalendar_next"
                android:padding="12dp"
                app:srcCompat="@drawable/slycalendar_chevron_right"
                tools:ignore="VectorDrawableCompat" />

        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:textAllCaps="true"
                android:textColor="@color/slycalendar_defHeaderColor"
                app:layout_constraintBottom_toBottomOf="@+id/txtCancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtCancel" />


            <TextView
                android:id="@+id/txtCancel"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/slycalendar_cancel"
                android:textAllCaps="true"
                android:textColor="@color/slycalendar_defTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtSave"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtSave"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/slycalendar_save"
                android:textAllCaps="true"
                android:textColor="@color/slycalendar_defTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</LinearLayout>